--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "screenit_webpage",
   "version": "0.0.0",
   "authors": [
-    "Hendrik Strobelt <hendrik@strobelt.com>"
+    "Hendrik Strobelt <hendrik@strobelt.com>",
+    "Kasper Dinkla <kasper.dinkla@gmail.com>"
   ],
   "description": "",
   "main": "",
@@ -17,6 +18,6 @@
     "tests"
   ],
   "dependencies": {
-    "bootswatch": "~3.3.6+1"
+    "bootswatch": "~3.3.6"
   }
 }
